# bot-for-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  database.py  handlers.py  loaders.py  main.py  middleware.py  models.py  utils.py
